# rxx

./: Cargo.toml
.github/workflows/: actions.yml
config/: init.rhai  init.rx
docs/: wgpu-vs-gl-comparison.md
plugins/: clean-edge.rxx  cleanedge.rxx  cleanedge.wgsl  dev.rxx  mmpx.rxx  mmpx.wgsl  mode-vis.rxx  rotate-scale.rxx  rotsprite-gl.rxx  rotsprite.wgsl  selection-outline.rxx  selection-outline.wgsl
src/: cmd.rs  draw.rs  gfx.rs  lib.rs  main.rs  palette.rs  parser.rs  renderer.rs  script.rs  session.rs  sprite.rs  view.rs
src/gfx/: color.rs  rect.rs  shape2d.rs
src/gfx/math/: algebra.rs
src/gl/: mod.rs
src/gl/data/: lookupmap.frag  lookupmap.vert  lookupquery.frag  lookupquery.vert  lookuptex.frag  lookuptex.vert
src/platform/: dummy.rs  glfw.rs
src/view/: resource.rs
src/wgpu/: mod.rs
src/wgpu/data/: cursor.wgsl  screen.wgsl  shape.wgsl  sprite.wgsl
tests/: main.rs
