[package]
name = "rx"
version = "0.5.2"
description = "a modern, minimalist pixel editor"
license = "GPL-3.0-only"
repository = "https://github.com/cloudhead/rx"
homepage = "https://rx.cloudhead.io"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2021"

[features]
default = ["glfw"]
glfw = ["dep:glfw", "dep:raw-window-handle"]

[dependencies]
pico-args = "0.3.0"
png = { version = "0.16.6" }
gif = "0.10.3"
chrono = "0.4.19"
glfw = { version = "0.61", optional = true, features = ["raw-window-handle-v0-6", "native-handles"] }
raw-window-handle = { version = "0.6", optional = true }
snap = "0.2.5"
log = { version = "0.4.14", features = ["std"] }
directories = "2.0.2"
seahash = "4.0.0"
digest = "0.8.1"
nonempty = "0.1.4"
memoir = "0.2.1"
arrayvec = "0.5"
num-traits = "*"
wgpu = "23"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

[dev-dependencies]
lazy_static = "1.3"
tempfile = "3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
